--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -35,7 +35,6 @@
   background-repeat: no-repeat;
   background-position: 95%;
   background-size: 13px;
-  line-height: -1.02px;
   padding: 0px 20px;
   color: black;
 }
@@ -44,7 +43,6 @@
   background-position: 1%;
 }
 .field>form input[type="text"] {
-  border: 0.2 em solid #3E9397;
   transition: all .3s ease-in;
 }
 
@@ -132,15 +130,19 @@
   color: #556B75;
 }
 .fa-bars:hover {
-  color: grey;
+  opacity: 0.8;
   transition: all .3s ease-in;
   -webkit-transition: all .3s ease-in;
   -moz-transition: all .3s ease-in;
   }
 .fa-bars-rotate {
-    transform: rotate(90deg);
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
+    transition: all .3s ease-in;
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  color: #1976d2 !important;
+}
+.fa-bars-rotate-2 {
+  color: tomato;
 }
 
 @media only screen and (min-width: 641px) and (max-width: 959px) {
@@ -229,107 +231,108 @@
   color: #1e88e5;
 }
 
-#notificationn {
-  width: 210px;
-  height: 200px;
-  position: absolute;
-  right: 14px;
-  top: 50px;
-  background: #fff;
-  display: none;
-  border-radius: 3px;
-  font-family: 'Open Sans', sans-serif;
-  transition: all .3s linear;
-  -webkit-transition: all .3s linear;
-  -moz-transition: all .3s linear;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
-  -moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.75);
-  box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
-}
-#notificationn .not {
-  list-style-type: none;
-  display: block;
-  position: relative;
-  margin: auto;
-  top: 0px;
-}
-#notificationn .cabeza {
+.box-tool {
   width: 100%;
   height: 40px;
-  background-color: rgba(44,44,44,0.777);
+  background-color: #fff;
+  box-shadow: 1px 1px 1px #f0f0f0;
+  list-style-type: none;
+  position: fixed;
+  top: 0px;
+  z-index: 9999;
+  margin-bottom: 200px;
 }
-#notificationn .cabeza em {
-  background-color: tomato;
-  padding: 10.5px 15px;
-  color: white;
-  border-radius: 100%;
-  width: 40px;
-  height: 40px;
-  float: right;
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 17px;
-  font-weight: 400;
-  margin-right: 7px;
-  margin-top: 15px;
+.logotipo_skyfolk {
+  position: fixed;
+  width: 47px;
+  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
+  /*background-color: tomato;*/
+  background-size: 120px;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 47px;
+  margin: auto;
+  left: 50%;
+  cursor: pointer;
+  animation-name: pre-loader-logo;
+  animation-duration: 4s;
+  animation-iteration-count: 3;
+  animation-direction: alternate;
+}
+
+@keyframes pre-loader-logo {
+    0%   {background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');}
+    25%  {background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');}
+    50%  {background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');}
+    75%  {background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');}
+    100% {background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');}
+}
+
+.logotipo_skyfolk-1 {
+  position: fixed;
+  width: 47px;
+  background-image: url('http://s11.postimg.org/58jltbaqb/logo.png');
+  background-size: 120px;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-position: center;
+  height: 47px;
+  margin: auto;
+  left: 50%;
   cursor: pointer;
 }
-#notificationn .cabeza em:hover {
-  opacity: 0.7;
-}
-#notificationn a {
-  font-weight: 100;
-  color: #708090;
-  font-size: 13px;
-  line-height: 17px;
-  width: 190px;
-  margin-left: 7.3px;
-  top: 20px;
-  font-family: 'Open Sans', sans-serif;
-}
-#notificationn .msg {
-  top: 10px;
-  position: relative;
-  display: block;
-  width: 102%;
-}
-#notificationn .fa-heart {
-  background-color: #de5252;
-  width: 25px;
-  height: 25px;
-  border-radius: 100%;
+
+.box-tool .logo {
+  position: fixed;
+  margin: auto;
   text-align: center;
-  padding: -4px 10px;
-  color: #fffffe;
-  margin-left: 5px;
-  cursor: pointer;
+  left: 50%;
+  padding: 0;
+  top: -280px;
 }
-#notificationn .fa-user {
-  background-color: #4ca0d9;
-  width: 25px;
-  height: 25px;
-  border-radius: 100%;
-  text-align: center;
-  padding: 0px 0px;
-  color: #fffffe;
-  margin-left: 0px;
+.box-tool img {
+  width: 120px;
+  height: 120px;
+  top: 0px;
   cursor: pointer;
+  position: fixed;
 }
-#notificationn .fa-paper-plane-o {
-  background-color: #4cd985;
-  width: 25px;
-  height: 25px;
-  border-radius: 100%;
-  text-align: center;
-  padding: 3px 0px;
-  color: #fffffe;
-  margin-left: 0px;ç
-  cursor: pointer;
+
+@media only screen and (max-width: 640px) {
+  .box-tool {
+    width: 100%;
+  }
+  .logotipo_skyfolk {
+    display: none;
+  }
+  .notificationss, .fa-comment {
+    display: none;
+  }
+  .field>form input[type=text] {
+      left: -260px;
+      margin-top: 3px;
+      width: 250px;
+  }
+  #toggle {
+    height: 380px;
+  }
+  #toggle li {
+    margin-top: 5px;
+  }
+  #toggle li:nth-child(8) {
+    display: none;
+  }
+  #page-wrapper {
+    width: 50%;
+    margin-left: -94px;
+  }
+  #page-wrapper .fontawesome-bullhorn, .fontawesome-camera, .fontawesome-map-marker {
+    display: none;
+  }
 }
-#notificationn li:nth-child(1n+2) {
-  display: list-item;
-  position: relative;
-  top: 10px;
-  margin-top: 7px;
-  margin-left: 5px;
+
+@media only screen and (min-width: 640px) and (max-width: 1080px) {
+  .logotipo_skyfolk {
+    left: 200px;
+  }
 }
