--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -109,19 +109,19 @@ body {
   }
 }
 .no_messages {
-	color: rgb(185,230,207);
-	position: relative;
-	font-family: 'Open Sans', sans-serif;
-	margin-left: 30%;
-	font-size: 30px;
+  color: rgb(185,230,207);
+  position: relative;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: 30%;
+  font-size: 30px;
 }
 .no_mess {
-	position: relative;
-	width: 120px;
-	height: 120px;
-	margin-top: 5%;
-	margin-left: 50%;
-	opacity: 0.6;
+  position: relative;
+  width: 120px;
+  height: 120px;
+  margin-top: 5%;
+  margin-left: 50%;
+  opacity: 0.6;
 }
 
 
@@ -277,18 +277,23 @@ blockquote {
 }
 
 .mensajes .message-headers {
-  border: 2px solid #1e88e5;
+  border-bottom: 3px solid #727272;
+  padding-bottom: 10px;
 }
-
 .mensajes .message-headers dt {
   color: #9e9e9e;
   margin-left: 7px;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
+.mensajes .message-headers dd {
+  font-family: 'Open Sans', sans-serif;
+}
+
 #compose-button-message {
   float: right;
-  position: absolute;
+  position: fixed;
   right: 2%;
   top: 90%;
 }
