--- a/skyfolk/static/css/setup.css
+++ b/skyfolk/static/css/setup.css
@@ -3,36 +3,51 @@
 body {
 	background-color: #efefef;
 	padding: 0;
-	  font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+}
+
+
+.display-info-reset-password {
+	width: 100%;
+	max-height: 40px;
+	position: fixed;
+	top: 0;
+	background-color: #fff;
+	padding: 0 12px;
+}
+.display-info-reset-password h6 {
+	color: #bdbdbd;
+	margin-top: 10px;
+}
+.display-info-reset-password .skyfolk-logo {
+	position: relative;
+	float: left;
+}
+
+.display-info-reset-password .skyfolk-logo img {
+	width: 120px;
+	margin-top: -40px;
+	height: 120px;
 }
 
 .menu {
 	position: relative;
-	display: block;
-	margin: 0;
 	width: 400px;
-	float: left;
-	left: 20px;
+	text-align: center;
 	height: auto;
+	margin-top: 60px;
+	margin-right: auto;
+	margin-left: auto;
+}
 
-}
-strong {
-	position: relative;
-	margin-top: 30px;
-	margin-bottom: 40px;
-	top: -10px;
-	color: grey;
-	font-weight: 100;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 12px;
-}
 ul {
 	list-style: none;
 }
 ul li {
 	margin-bottom: 15px;
-	position: relative;
-	display: table;
+	margin-right: 7px;
+	margin-left: 7px;
+	display: inline-block;
 }
 button {
 	 background-color:#5A5550;
@@ -52,4 +67,54 @@ button {
     font-family: 'Lato', sans-serif;
     outline: none;
     transition: all .2s ease-in;
+}
+
+h1 {
+	text-align: center;
+}
+
+strong {
+	text-align: center;
+	color: grey;
+	font-weight: 100;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12px;
+}
+
+p {
+	text-align: center;
+}
+
+form {
+	position: relative;
+	display: block;
+	width: 40%;
+	height: auto;
+	margin: auto;
+}
+
+input[type="submit"] {
+    background-color: #64B5F6 !important;
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    vertical-align: middle;
+    z-index: 1;
+    text-decoration: none;
+    color: #FFF;
+    text-align: center;
+    letter-spacing: 1px;
+    border: none;
+    border-radius: 2px;
+    height: 36px;
+    line-height: 36px;
+    outline: 0;
+    padding: 0 2rem;
+    text-transform: uppercase;
 }
