--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -1,9 +1,3 @@
-@import url(http://weloveiconfonts.com/api/?family=entypo);
-
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-}
-
 .profile:not(:hover) {
   color: rgba(44,44,44,0.888);
   width: 105px;
@@ -11,7 +5,7 @@
   position: fixed;
   background-color: white;
   right: 0%;
-  top: 82%;
+  top: 87%;
   border-radius: 100%;
   background-position:center;
   background-size: 100%;
@@ -32,7 +26,7 @@
   position: fixed;
   background-color: white;
   right: 0%;
-  top: 82%;
+  top: 87%;
   border-radius: 100%;
   background-position:center;
   background-size: 100%;
@@ -103,13 +97,18 @@
   z-index: 9999;
 }
 
-@media (min-width: 1200px) and (min-height: 900px) {
+@media only screen and (min-width: 1200px) and (min-height: 900px) {
   .profile {
     top: 88%;
   }
 }
-@media (max-width: 990px) {
+@media only screen and (max-width: 990px) {
   .profile {
     top: 88%;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .profile {
+    display: none;
   }
 }
