--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -6,9 +6,9 @@
  	
  	<link rel="stylesheet" href="{{STATIC_URL}}css/configuracion.css" type="text/css" media="all">
 	<link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css' />
+	<link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js" /></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css">
 	
 	
 
@@ -39,20 +39,20 @@
 {% block content %}
 <hgroup>
 <span> 
-	<h3 class="fontawesome-cog"> Configuracion</h3>
+	<h3 class="fontawesome-cog"><i class="fa fa-cog"></i> Configuracion</h3>
 	<h6>Configure, edite o cambie cualquier cosa de su perfil.</h6>
 </span>
 </hgroup>
 <body>
   <aside>
     <nav>
-      <li class="perfil" onclick="javascript:window.location.href='/config/profile'"><i class="fontawesome-user"></i>Perfil</li>
-      <li class="Contraseña" onclick="javascript:window.location.href='/accounts/password/change/'"><i class="fontawesome-lock"></i>Contraseña</li>
+      <li class="perfil" onclick="javascript:window.location.href='/config/profile'"><i class="fa fa-user"></i>Perfil</li>
+      <li class="Contraseña" onclick="javascript:window.location.href='/accounts/password/change/'"><i class="fa fa-lock"></i>Contraseña</li>
       <li onclick="javascript:window.location.href='/config/privacity'" class="Seguridad"><i class="fa fa-eye fa"></i>Seguridad y privacidad</li>
-      <li class="Movil"><i class="fontawesome-envelope-alt"></i>Movil y correo</li>
-      <li class="widgets"><i class="fontawesome-list-ul"></i>Widgets</li>
-      <li class="Diseño"><i class="fontawesome-dashboard"></i>Diseño</li>
-      <li class="ban"><i class="fontawesome-minus-sign"></i>Cuentas bloqueadas</li>
+      <li class="Movil"><i class="fa fa-mobile"></i>Movil y correo</li>
+      <li class="widgets"><i class="fa fa-list-ul"></i>Widgets</li>
+      <li class="Diseño"><i class="fa fa-dashboard"></i>Diseño</li>
+      <li class="ban"><i class="fa fa-minus"></i>Cuentas bloqueadas</li>
       <li onclick="javascript:window.location.href='/config/relations'" class="relaciones"><i class="fa fa-circle-thin fa"></i>Mis relaciones</li>
     </nav>
   </aside>
