--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -65,11 +65,8 @@
         $('#background_cycler').hide();//hide the background while the images load, ready to fade in later
       </script>
 
-      <img class="active" src="{{STATIC_URL}}img/backgrounds/1.jpg" alt=""/>
-        <img src="{{STATIC_URL}}img/backgrounds/2.jpg" alt=""/>
-          <img src="{{STATIC_URL}}img/backgrounds/3.jpg" alt=""/>
-            <img src="{{STATIC_URL}}img/backgrounds/4.jpg" alt=""/>
-                <img src="{{STATIC_URL}}img/backgrounds/5.jpg" alt=""/>
+      <img class="active" src="{{STATIC_URL}}img/bg2.jpg" alt=""/>
+        <img src="{{STATIC_URL}}img/5.jpg" alt=""/>
       </div>
 
        	
