--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -7,9 +7,9 @@
  	<link rel="stylesheet" href="{{STATIC_URL}}css/configuracion.css" type="text/css" media="all">
 	<link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js" /></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js"/>
 	<link rel="stylesheet" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css">
-	
+	<link rel="icon" type="image/png" href="{% static "images/favicon.ico" %}" />
 	
 
 	<!--[if IE 7]>
