--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/timeline.css" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/font-awesome.min.css">
-<link rel="icon" type="image/png" href="{% static "images/favicon.ico" %}" />
+<link rel="icon" type="image/ico" href="{{ STATIC_URL }}images/favicon.ico"/>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
 
