--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -40,7 +40,7 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 -->
 {% endif %}
 <div id="login" class="row grey darken-2 z-depth-2">
-	<h5>Iniciar sesión</h5>
+	<h5>Iniciar sesion</h5>
 	<form class="login form-3" method="POST" action="{% url 'account_login' %}">
 		<div class="form-group">
 	  {% csrf_token %}
