--- a/templates/account/base_login-signup.html
+++ b/templates/account/base_login-signup.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap-theme.css" />
         -->
-        <title>Â¡Bienvenido a Skyfolk! - Iniciar sesiÃ (pre)</title>
+        <title>¡Bienvenido a Skyfolk! - Iniciar sesión</title>
         <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," />
         <link rel="shortcut icon" href="{{STATIC_URL}}img/logo.ico"> 
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
@@ -74,7 +74,7 @@
     <div class="footer_base">   
       <div class="col s3 m3 l12footer-copyright blue-text text-lighten-5">
             <div class="container">
-            <a class="blue-text text-lighten-5 left">Â© 2015 Copyright</a>
+            <a class="blue-text text-lighten-5 left">© 2015 Copyright</a>
             <a class="blue-text text-lighten-5 right" href="#!">More Links</a>
             <a id="about" class="blue-text text-lighten-5" href="/about/home">Sobre Skyfolk</a>
             <a id="Blog" class="blue-text text-lighten-5" href="/blog">Blog</a>
