fix bug base_search

--- a/skyfolk/templates/account/base_search.html
+++ b/skyfolk/templates/account/base_search.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="Mi perfil, Mensajes, Amigos, Seguidores, Comentarios">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/listado_busqueda.css" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<link rel="icon" type="image/png" href="{% static "images/favicon.ico" %}" />
+<link rel="icon" type="image/png" href="{{ STATIC_URL }}img/favicon.ico" />
 <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
