--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Hojas de estilo SASS -->
 
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Skyfolk"/>        
+	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Skyfolk"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
@@ -12,9 +12,9 @@
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap-theme.css" />
         -->
-        <title>Â¡Bienvenido a Skyfolk! - Iniciar sesiÃ (pre)</title>
+        <title>¡Bienvenido a Skyfolk! - Iniciar sesión (pre)</title>
         <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," />
-        <link rel="shortcut icon" href="{{STATIC_URL}}img/logo.ico"> 
+        <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico">
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
 
       <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
@@ -65,8 +65,8 @@
         $('#background_cycler').hide();//hide the background while the images load, ready to fade in later
       </script>
 
-      <img class="active" src="{{STATIC_URL}}img/bg2.jpg" alt=""/>
-        <img src="{{STATIC_URL}}img/5.jpg" alt=""/>
+      <img class="active" src="{{STATIC_URL}}img/backgrounds/1.jpg" alt=""/>
+        <img src="{{STATIC_URL}}img/backgrounds/5.jpg" alt=""/>
       </div>
 
        	
